@@ -46,10 +46,10 @@ define( function( require ) {
   Solute.BLOOD = new Solute( bloodString, 7.4, new Color( 185, 12, 0 ), Water.color );
   Solute.SPIT = new Solute( spitString, 7.4, new Color( 202, 240, 239 ), Water.color );
   Solute.MILK = new Solute( milkString, 6.5, new Color( 250, 250, 250 ), Water.color );
-  Solute.CHICKEN_SOUP = new Solute( chickenSoupString, 5.8, new Color( 250, 225, 18 ), Water.color );
+  Solute.CHICKEN_SOUP = new Solute( chickenSoupString, 5.8, new Color( 255, 240, 104 ), Water.color );
   Solute.COFFEE = new Solute( coffeeString, 5.0, new Color( 164, 99, 7 ), Water.color );
   Solute.BEER = new Solute( beerString, 4.5, new Color( 255, 200, 0 ), Water.color );
-  Solute.LIME_SODA = new Solute( sodaString, 2.5, new Color( 204, 255, 102 ), Water.color );
+  Solute.SODA = new Solute( sodaString, 2.5, new Color( 204, 255, 102 ), Water.color );
   Solute.VOMIT = new Solute( vomitString, 2, new Color( 255, 171, 120 ), Water.color );
   Solute.BATTERY_ACID = new Solute( batteryAcidString, 1, new Color( 255, 255, 0 ), Water.color );
   Solute.CUSTOM = new Solute( customString, 7, new Color( 251, 236, 150 ), Water.color );
