@@ -1,3 +1,5 @@
+12/9/13 use specified color for 'Chicken Soup'
+12/9/13 rename Solute.LIME_SODA to Solute.SODA
 12/7/13 flatten faucet type hierarchy, in preparation for reflecting water faucet
 12/7/13 change request: add 'Chicken Soup', make it the default
 12/6/13 feature request: add highlight around pH value display when the displayed value is '7.00'
